--- a/index.html
+++ b/index.html
@@ -149,6 +149,10 @@
         .filter-button:hover:not(.active) {
             background-color: #DBEAFE; 
         }
+        #car-filters-container .filter-button {
+            flex-shrink: 0; /* Prevent buttons from shrinking in flex container */
+        }
+
 
         /* Scroll to top button */
         #scrollToTopBtn {
@@ -180,7 +184,7 @@
 
 
         /* Custom scrollbar (optional) */
-        ::-webkit-scrollbar { width: 10px; } /* Adjusted for better mobile experience if scrollbar is visible */
+        ::-webkit-scrollbar { width: 10px; } 
         ::-webkit-scrollbar-track { background: #e5e7eb; border-radius: 10px; } 
         ::-webkit-scrollbar-thumb { background: #60A5FA; border-radius: 10px; } 
         ::-webkit-scrollbar-thumb:hover { background: #3B82F6; } 
@@ -224,11 +228,11 @@
 </head>
 <body class="bg-gray-100 text-gray-700 antialiased">
 
-    <header id="main-header" class="fixed w-full top-0 z-50 py-3 md:py-4"> {/* Adjusted padding for mobile */}
-        <div class="container mx-auto px-4 sm:px-6 lg:px-8"> {/* Added sm:px-6 */}
+    <header id="main-header" class="fixed w-full top-0 z-50 py-3 md:py-4">
+        <div class="container mx-auto px-4 sm:px-6 lg:px-8">
             <nav class="flex items-center justify-between">
                 <a href="#home" class="text-xl sm:text-2xl lg:text-3xl font-bold text-white whitespace-nowrap">Maxuti <span class="text-amber-400">Trans</span></a>
-                <div class="hidden md:flex space-x-4 lg:space-x-5 items-center"> {/* Adjusted space-x for md and lg */}
+                <div class="hidden md:flex space-x-4 lg:space-x-5 items-center"> 
                     <a href="#home" class="nav-link text-white transition-colors duration-300 whitespace-nowrap px-1 lg:px-2">მთავარი</a>
                     <a href="#about" class="nav-link text-white transition-colors duration-300 whitespace-nowrap px-1 lg:px-2">ჩვენს შესახებ</a>
                     <a href="#services" class="nav-link text-white transition-colors duration-300 whitespace-nowrap px-1 lg:px-2">სერვისები</a>
@@ -239,7 +243,7 @@
                     </a>
                 </div>
                 <div class="md:hidden">
-                    <button id="menu-button" aria-label="მენიუს გახსნა" class="text-white focus:outline-none p-2 -mr-2"> {/* Added padding for easier tap */}
+                    <button id="menu-button" aria-label="მენიუს გახსნა" class="text-white focus:outline-none p-2 -mr-2">
                         <i class="fas fa-bars fa-lg"></i>
                     </button>
                 </div>
@@ -264,13 +268,13 @@
             <div class="video-overlay"></div>
         </div>
         <div class="hero-content container mx-auto px-4">
-            <h1 class="text-3xl sm:text-4xl md:text-6xl lg:text-7xl font-bold mb-4 sm:mb-6 leading-tight hero-text-animate">ავეჯის და ტვირთების <br class="sm:hidden"><span class="text-amber-400">პროფესიონალური</span> გადაზიდვა</h1>
+            <h1 class="text-3xl sm:text-4xl md:text-6xl lg:text-7xl font-bold mb-4 sm:mb-6 leading-tight hero-text-animate break-words sm:break-normal">ავეჯის და ტვირთების <br class="sm:hidden"><span class="text-amber-400">პროფესიონალური</span> გადაზიდვა</h1>
             <p class="text-md sm:text-lg md:text-xl lg:text-2xl mb-8 sm:mb-10 max-w-md sm:max-w-xl md:max-w-3xl mx-auto hero-text-animate" style="animation-delay: 0.7s;">სწრაფი, საიმედო და ხარისხიანი მომსახურება თბილისსა და სრულიად საქართველოში.</p>
             <a href="#contact" class="cta-button text-base sm:text-lg lg:text-xl font-semibold px-6 py-3 sm:px-8 sm:py-3.5 lg:px-10 lg:py-4 rounded-lg hero-button-animate">დაგვიკავშირდით</a>
         </div>
     </section>
 
-    <section id="about" class="py-12 md:py-16 lg:py-24 bg-white"> {/* Adjusted padding */}
+    <section id="about" class="py-12 md:py-16 lg:py-24 bg-white"> 
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-10 md:mb-12 lg:mb-20 fade-in-up">
                 <h2 class="section-title text-2xl sm:text-3xl lg:text-4xl font-bold text-gray-800">ჩვენი გამოცდილება თქვენს სამსახურში</h2>
@@ -379,15 +383,17 @@
                 <h2 class="section-title text-2xl sm:text-3xl lg:text-4xl font-bold text-gray-800">ჩვენი ავტოპარკი</h2>
                 <p class="text-base sm:text-lg text-gray-600 max-w-xl md:max-w-2xl mx-auto mt-4 sm:mt-6">აირჩიეთ თქვენს საჭიროებებზე მორგებული ტრანსპორტი.</p>
             </div>
-            <div class="mb-10 md:mb-12 text-center fade-in-up">
-                <span class="text-lg sm:text-xl font-semibold mr-2 sm:mr-3 text-gray-700">ტვირთამწეობა:</span>
-                <div id="car-filters" class="inline-flex flex-wrap justify-center rounded-lg shadow-md" role="group">
-                    <button type="button" data-capacity="all" class="filter-button active py-2 px-3 sm:py-2.5 sm:px-5 text-xs sm:text-sm font-medium text-gray-900 bg-white rounded-l-lg border border-gray-300 hover:bg-gray-100 focus:z-10 focus:ring-2 focus:ring-blue-500 focus:text-blue-700">ყველა</button>
-                    <button type="button" data-capacity="500" class="filter-button py-2 px-3 sm:py-2.5 sm:px-5 text-xs sm:text-sm font-medium text-gray-900 bg-white border-t border-b border-gray-300 hover:bg-gray-100 focus:z-10 focus:ring-2 focus:ring-blue-500 focus:text-blue-700">500კგ</button>
-                    <button type="button" data-capacity="1600" class="filter-button py-2 px-3 sm:py-2.5 sm:px-5 text-xs sm:text-sm font-medium text-gray-900 bg-white border-t border-b border-l border-gray-300 hover:bg-gray-100 focus:z-10 focus:ring-2 focus:ring-blue-500 focus:text-blue-700">1600კგ</button>
-                    <button type="button" data-capacity="1800" class="filter-button py-2 px-3 sm:py-2.5 sm:px-5 text-xs sm:text-sm font-medium text-gray-900 bg-white border-t border-b border-gray-300 hover:bg-gray-100 focus:z-10 focus:ring-2 focus:ring-blue-500 focus:text-blue-700">1800კგ</button>
-                    <button type="button" data-capacity="2000" class="filter-button py-2 px-3 sm:py-2.5 sm:px-5 text-xs sm:text-sm font-medium text-gray-900 bg-white border-t border-b border-r border-gray-300 hover:bg-gray-100 focus:z-10 focus:ring-2 focus:ring-blue-500 focus:text-blue-700">2000კგ</button>
-                    <button type="button" data-capacity="3200" class="filter-button py-2 px-3 sm:py-2.5 sm:px-5 text-xs sm:text-sm font-medium text-gray-900 bg-white rounded-r-lg border border-gray-300 hover:bg-gray-100 focus:z-10 focus:ring-2 focus:ring-blue-500 focus:text-blue-700">3200კგ</button>
+            <div id="car-filters-container" class="mb-10 md:mb-12 text-center fade-in-up">
+                <span class="block sm:inline text-lg sm:text-xl font-semibold mb-3 sm:mb-0 sm:mr-3 text-gray-700">ტვირთამწეობა:</span>
+                <div id="car-filters" class="overflow-x-auto pb-2 sm:pb-0 sm:overflow-x-visible">
+                    <div class="inline-flex flex-nowrap sm:flex-wrap justify-start sm:justify-center rounded-lg shadow-md" role="group">
+                        <button type="button" data-capacity="all" class="filter-button active py-2 px-4 sm:py-2.5 sm:px-5 text-xs sm:text-sm font-medium text-gray-900 bg-white rounded-l-lg border border-gray-300 hover:bg-gray-100 focus:z-10 focus:ring-2 focus:ring-blue-500 focus:text-blue-700 whitespace-nowrap">ყველა</button>
+                        <button type="button" data-capacity="500" class="filter-button py-2 px-4 sm:py-2.5 sm:px-5 text-xs sm:text-sm font-medium text-gray-900 bg-white border-t border-b border-gray-300 hover:bg-gray-100 focus:z-10 focus:ring-2 focus:ring-blue-500 focus:text-blue-700 whitespace-nowrap">500კგ</button>
+                        <button type="button" data-capacity="1600" class="filter-button py-2 px-4 sm:py-2.5 sm:px-5 text-xs sm:text-sm font-medium text-gray-900 bg-white border-t border-b border-l border-gray-300 hover:bg-gray-100 focus:z-10 focus:ring-2 focus:ring-blue-500 focus:text-blue-700 whitespace-nowrap">1600კგ</button>
+                        <button type="button" data-capacity="1800" class="filter-button py-2 px-4 sm:py-2.5 sm:px-5 text-xs sm:text-sm font-medium text-gray-900 bg-white border-t border-b border-gray-300 hover:bg-gray-100 focus:z-10 focus:ring-2 focus:ring-blue-500 focus:text-blue-700 whitespace-nowrap">1800კგ</button>
+                        <button type="button" data-capacity="2000" class="filter-button py-2 px-4 sm:py-2.5 sm:px-5 text-xs sm:text-sm font-medium text-gray-900 bg-white border-t border-b border-r border-gray-300 hover:bg-gray-100 focus:z-10 focus:ring-2 focus:ring-blue-500 focus:text-blue-700 whitespace-nowrap">2000კგ</button>
+                        <button type="button" data-capacity="3200" class="filter-button py-2 px-4 sm:py-2.5 sm:px-5 text-xs sm:text-sm font-medium text-gray-900 bg-white rounded-r-lg border border-gray-300 hover:bg-gray-100 focus:z-10 focus:ring-2 focus:ring-blue-500 focus:text-blue-700 whitespace-nowrap">3200კგ</button>
+                    </div>
                 </div>
             </div>
             <div id="cars-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 md:gap-10">
