--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             </div>
             <div class="flex flex-wrap items-center -mx-4">
                 <div class="w-full lg:w-1/2 px-4 mb-8 md:mb-10 lg:mb-0 fade-in-up">
-                    <img src="https://images.pexels.com/photos/4488638/pexels-photo-4488638.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="გადაზიდვის პროცესი, სატვირთო მანქანა" class="rounded-xl shadow-2xl w-full h-auto max-h-[300px] sm:max-h-[400px] lg:max-h-[450px] object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/cccccc/969696?text=სურათი+მიუწვდომელია';">
+                    <img src="https://raw.githubusercontent.com/aroshidze/Maxuti/refs/heads/main/cargo.jpg" alt="გადაზიდვის პროცესი, სატვირთო მანქანა" class="rounded-xl shadow-2xl w-full h-auto max-h-[300px] sm:max-h-[400px] lg:max-h-[450px] object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/cccccc/969696?text=სურათი+მიუწვდომელია';">
                 </div>
                 <div class="w-full lg:w-1/2 px-4 fade-in-up" style="transition-delay: 0.2s;">
                     <h3 class="text-xl sm:text-2xl font-semibold text-gray-800 mb-4 sm:mb-5">რატომ Maxuti Trans?</h3>
